# icedata

./: .gitignore  404.html  BCCD.ipynb  BCCD_Dataset.ipynb  CHANGELOG.md  CONTRIBUTING.md  Creating_Dataset.ipynb  DATASETS_TOOLS.md  PARSING_CHEATSHEET.md  README.md  index.html  pyproject.toml  settings.ini  setup.cfg  setup.py  sitemap.xml
.github/workflows/: ci-all-testing-master.yml  ci-all-testing.yml  mk-docs-build.yml  mk-docs-deploy.yml  pypi-release.yml
about/: index.html
birds/: index.html
biwi/: index.html
changelog/: index.html
changing-the-colors/: index.html
coco/: index.html
coco_data/: index.html
code_of_conduct/: index.html
contributing/: index.html
custom_parser/: index.html
dataset_voc_nb/: index.html
datasets_tools/: index.html
docs/: ABOUT.md  HOW-TO.md  INSTALL.md  README.md  autogen.py  mkdocs.yml  tutobooks.py
docs/templates/: index.md
examples/: birds_exp.md  coco_exp.md  fridge_exp.md  pennfudan_exp.md  pets_exp.md  voc_exp.md
examples/birds_exp/: index.html
examples/coco_exp/: index.html
examples/fridge_exp/: index.html
examples/pennfudan_exp/: index.html
examples/pets_exp/: index.html
examples/voc_exp/: index.html
fridge/: index.html
fridge_data/: index.html
fridge_parser/: index.html
getting_started/: index.html
how-to/: index.html
how_train_dataset/: index.html
icedata/: __init__.py
icedata/datasets/: __init__.py
icedata/datasets/birds/: README.md  __init__.py  data.py  parser.py  trained_models.py
icedata/datasets/biwi/: README.md  __init__.py  data.py  dataset.py  parser.py
icedata/datasets/coco/: README.md  __init__.py  data.py  dataset.py  parser.py  trained_models.py
icedata/datasets/exdark_trimmed/: __init__.py  data.py  dataset.py  parser.py
icedata/datasets/fridge/: README.md  __init__.py  data.py  dataset.py  parser.py  trained_models.py
icedata/datasets/ochuman/: README.md  __init__.py  data.py  ochuman.ipynb  parser.py
icedata/datasets/pennfudan/: README.md  __init__.py  data.py  parser.py  (+1 more)
icedata/fridge/: __init__.py  data.py  trained_models.py
icedata/template/: README.md  __init__.py  generator.py
icedata/utils/: __init__.py  plot_size_histogram.py  test_utils.py  utils.py
install/: index.html
js/: crate.js
notebooks/: custom_parser.ipynb
notebooks/dev/: BCCD_Dataset.ipynb  OCHuman_Keypoint_Detection.ipynb  bccd.ipynb  birds.ipynb  indoor_objects.ipynb
ochuman/: index.html
parsing_cheatsheet/: index.html
pennfudan/: index.html
pets/: index.html
scripts/: new_dataset.py
search/: search_index.json
templates/dataset/: README.md  __init__.py  data.py  parser.py  trained_models.py
voc/: index.html
(+42 files in other folders)
