[tool.poetry]
name = "icedata"
version = "0.0.2"
description = "Datasets collection"
authors = ["Lucas Goulart Vazquez", "Farid Hassainia"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6.1"
icevision = "^0.1.0-rc.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
