[tool.poetry]
name = "icedata"
version = "0.0.2"
description = "Datasets collection"
authors = ["Lucas Goulart Vazquez", "Farid Hassainia"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6.1"
icevision = {extras = ["all"], version = "^0.1.3"}

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
black = "^19.3b0"
# Docs dependencies
keras-autodoc = "0.5.1"
mkdocs = "^1.1.2"
mkdocs-material = "^5.5.12"
jupyter = "^1.0.0"
pymdown-extensions = "^8.0"
Sphinx = "<3.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
