[metadata]
name = icedata
version = 0.3.0dev
author = Lucas Goulart Vazquez, Farid Hassainia
author_email = lgvaz42@gmail.com, farid@airctic.com
description = Datasets Collection
keywords = object detection, machine learning
license = Apache-2.0
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering :: Artificial Intelligence
  Topic :: Scientific/Engineering :: Image Recognition

[options]
python_requires = >=3.6.1,<4
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
    icevision[all] >=0.2.0b4
    fire >=0.3.1,<1

[options.extras_require]
dev =
  black >=20.8b1,<21
  pytest >=6,<7
  keras-autodoc ==0.6.0
  mkdocs >=1.1.2,<2
  mkdocs-material >=5.5.12,<6
  jupyter >=1.0.0,<2
  pymdown-extensions >=8.0,<9
  Sphinx >=3.1.0,<4
  pytest-cov >=2.10.1,<3
  flake8 >=3.8.3,<4
  